@@ -22,6 +22,11 @@ dependencies {
 }
 
 graalvmNative {
+    binaries {
+        test {
+            buildArgs.add('--enable-preview')
+        }
+    }
     agent {
         defaultMode = "conditional"
         modes {
